hero testing refactor